# solar-navigator

./: .clinerules  .gitignore  .windsurfrules  AGENTS.md  ASSET_ATTRIBUTION.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.rs
.cargo/: config.toml
.cursor/rules/: solar-navigator.mdc
.github/: SECURITY.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
assets/icon/: AppIcon.icns
assets/models/asteroids/: rock_01.glb  rock_02.glb  rock_03.glb  rock_04.glb
assets/shaders/: planet_atmosphere.wgsl  planet_ring.wgsl
assets/spice/: README.md
assets/textures/: README.md
docs/: gpu-profiling.md
scripts/: compress_textures.ps1  compress_textures.sh  download_spice_kernels.ps1  download_spice_kernels.sh  download_textures_minor_bodies_science.ps1  download_textures_minor_bodies_science.sh  download_textures_solar_system_scope.ps1  download_textures_solar_system_scope.sh  generate_app_icon.sh  installer.nsi  linker-wrapper.sh  package_linux.sh  package_macos_arm64.sh  package_windows.ps1  package_windows_installer.ps1  setup_cspice_linux_x86_64.sh  setup_cspice_macos_arm64.sh  setup_cspice_windows_x86_64.ps1  sweep.sh
src/: ephemeris.rs  main.rs
src/app/: asteroids.rs  camera.rs  materials.rs  mod.rs  render.rs  setup.rs  simulation.rs  types.rs  ui.rs  util.rs
