[package]
name = "solar-navigator"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = ["spice"]
spice = ["dep:rust-spice"]

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "async_executor",
    "bevy_anti_alias",
    "bevy_asset",
    "bevy_camera",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "bevy_gltf",
    "bevy_image",
    "bevy_input_focus",
    "bevy_light",
    "bevy_log",
    "bevy_mesh",
    "bevy_pbr",
    "bevy_post_process",
    "bevy_render",
    "bevy_shader",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "hdr",
    "jpeg",
    "multi_threaded",
    "png",
    "std",
    "tonemapping_luts",
] }
bevy_egui = { version = "0.39.1", default-features = false, features = [
    "default_fonts",
    "manage_clipboard",
    "open_url",
    "render",
] }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.11.27", default-features = false, features = ["blocking", "rustls-tls"] }
winit = { version = "0.30", default-features = false }
rust-spice = { version = "0.7.8", default-features = false, features = ["download", "lock"], optional = true }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
