[package]
name = "solar-navigator"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = ["spice"]
spice = ["dep:rust-spice"]

[dependencies]
bevy = { version = "0.19.0", default-features = false, features = [
    "async_executor",
    "bevy_anti_alias",
    "bevy_asset",
    "bevy_camera",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "bevy_gltf",
    "bevy_image",
    "bevy_input_focus",
    "bevy_light",
    "bevy_log",
    "bevy_mesh",
    "bevy_pbr",
    "bevy_post_process",
    "bevy_render",
    "bevy_shader",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "hdr",
    "jpeg",
    # GPU-compressed texture support: load KTX2 or DDS containers holding
    # block-compressed (BC7/BC1) mipmapped textures. `zstd_rust` is the
    # pure-Rust zstd backend (required by `ktx2`) so the portable build gains
    # no native dependency. Both loaders read raw BCn (no Basis transcoder).
    # Encode the compressed files with scripts/compress_textures.*.
    "ktx2",
    "zstd_rust",
    "dds",
    "multi_threaded",
    "png",
    "std",
    "tonemapping_luts",
] }
bevy_egui = { version = "0.41.0", default-features = false, features = [
    # Build egui's AccessKit tree and bridge it to the OS accessibility layer
    # (Narrator / VoiceOver / NVDA) via bevy_winit's adapters, so screen-reader
    # users can reach the side panel's controls. DefaultPlugins already supplies
    # the bevy_a11y resources this relies on; the feature is independent of the
    # `spice` flag, so both build modes get accessibility.
    "accesskit",
    "default_fonts",
    "manage_clipboard",
    "open_url",
    "render",
] }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "query", "rustls"] }
winit = { version = "0.30", default-features = false }
rust-spice = { version = "0.7.8", default-features = false, features = ["download", "lock"], optional = true }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
